# GoldenSunTLA_Editor

./: GoldenSunTLA_Editor_bugfix.gm81  README.md  changelog.txt
GSdatahandler/: CMakeLists.txt  CMakeSettings.json
GSdatahandler/include/: compression.h  dllmain.h  includes.h  spacemanager.h  strings.h
GSdatahandler/src/: compression.cpp  dllmain.cpp  spacemanager.cpp  strings.cpp
resources/: language.ini  scripting.ini
